# bookshell

./: .gitignore  .pre-commit-config.yaml  LICENSE
AWS/: AWS_Configuration review Report.xlsx  SAP.md  security.md  template.json  template.yml
AWS/AWS/: AWS-cheat-sheets.md
AWS/AWS-certificate/: 1.AWS-storage.md
AWS/AWS-custom-policies/: crawl_policies.py
AWS/custom_policies/: crawl_policies.py
AWS/jenkins/: jenkins.yaml
AWS/services/: VPNClient.sh  infra.drawio
CICD/jenkins/: jenkins.yaml
DesignPattern/SOLID/: 2-open-close-principal.py  5-dependency-inversion-principal.py
DesignPattern/example/: data_unit.py  thread_executor.py
DesignPattern/others/: thread_executor.py
Docker/: bk.lambda.Dockerfile  lambda.Dockerfile
Docker/aws-lambda-poppler-layer/: builder.Dockerfile  export.sh  (+1 more)
Tools/clitools/: .gitignore  pyproject.toml  setup.cfg
Tools/clitools/clitool/: cache.py  cli.py  console.py  settings.py  utils.py
Tools/clitools/clitool/commands/: __init__.py  cloudformation.py  iam.py  s3.py  session.py
Tools/clitools/clitool/services/: __init__.py  base.py  cloudformation.py  iam.py  s3.py  session.py
Tools/clitools/clitool/types/: __init__.py  base.py  cloudformation.py  iam.py  s3.py  session.py
Tools/clitools/tests/.aws/: credentials
scripts/: aws_s3_delete_bucket.py  docker-list-processing.sh  docker-prune.sh  git-config-global.sh  git-prompt-install.sh  git-ssh-keygen.sh  git-tag.sh  install-docker.sh  install-golang.sh  install-nodejs.sh  util-bashrc_wsl.sh  util-create-aliases.sh  util-definecolors.sh  util-lff.sh  wsl-setup.sh
(+320 files in other folders)
